[package]
name = "advent_of_code_2015"
version = "0.1.0"
authors = ["Sebastian Andersson <sebastian@bittr.nu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_of_tools = {git = "https://github.com/bofh69/advent_of_tools.git"}
ahash = "0.8.11"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
json = "0.12.4"
md5 = "0.7.0"
rayon = "1.5.0"
regex = "1.4.2"
